# kabuto-kurage

./: .env.example  .gitignore  README.md  Taskfile.yml  pyproject.toml
.loom/decisions/: github-scale-demo-many-tenant-opt-in.md  initial-portfolio-architecture.md  portable-dlt-duckdb-taskfile-modernization.md  use-dlt-for-github-ingestion.md
.loom/evidence/: 2026-06-18-dagster-asset-graph.md  2026-06-18-export-api-docs-validation.md  2026-06-18-export-api-followup-planning.md  2026-06-18-export-query-layer-validation.md  2026-06-18-final-mvp-validation.md  2026-06-18-github-bronze-ingestion.md  2026-06-18-github-silver-models.md  2026-06-18-gold-engineering-metrics.md  (+26 more)
config/: tenants.example.yaml  tenants.scale.yaml
docs/: architecture.md  dagster-asset-graph.md  development.md  export-api.md  github-bronze-ingestion.md  github-gold-metrics.md  github-silver-models.md  local-iac.md  observability.md  stack-validation.md  tenancy.md
tests/: test_dagster_assets.py  test_dagster_cli_materialization.py  test_export_api_docs.py  test_export_github_metrics.py  test_export_mcp_wrapper.py  test_export_rest_api.py  test_github_bronze_ingestion.py  test_github_gold_metrics.py  test_github_silver_models.py  test_local_iac.py  test_modernized_portfolio_docs.py  test_observability.py  test_portable_storage_stack.py  test_portfolio_docs.py  test_scaffold.py  test_storage_profiles.py  test_taskfile_workflow.py  test_tenancy.py  test_tenant_isolation.py
tools/: build_github_gold.py  build_github_silver.py  ingest_github_bronze.py  observe_github.py  validate_stack.py
(+89 files in other folders)
